--- a/src/Product Details/ProductDetails.module.css
+++ b/src/Product Details/ProductDetails.module.css
@@ -6,7 +6,7 @@
 .ProductTitle {
     font-size: 45px;
     font-weight: 600;
-    margin-top: 0;
+    margin-top: 30px;
     margin-bottom: 16px;
 }
 
