This is the second commit

--- a/src/Topbar/Topbar.module.css
+++ b/src/Topbar/Topbar.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     background-color: black;
     padding: 24px 48px 12px;
-    text-align: center;
+    text-align: left;
     position: fixed;
     top: 0;
     left: 0;
