--- a/src/App.module.css
+++ b/src/App.module.css
@@ -140,3 +140,9 @@ body {
     padding: 12px 24px;
     margin-top: 36px;
 }
+
+@media (max-width: 415px){
+    .MainContainer{
+        display: block;
+    }
+}
