--- a/src/Product Details/ProductDetails.module.css
+++ b/src/Product Details/ProductDetails.module.css
@@ -15,6 +15,7 @@
     color: rgba(0, 0, 0, 0.8);
     margin-top: 0;
     margin-bottom: 16px;
+    width: 100%;
 }
 
 .SectionHeading{
@@ -61,4 +62,14 @@
     border: 0;
     padding: 12px 24px;
     margin-top: 36px;
+}
+
+
+@media (max-width: 415px) {
+    .ProductTitle{
+        display:none
+    }
+    .ProductDescription{
+        display:none
+    }
 }
