--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,11 +28,13 @@ body {
 .ProductPreview {
     width:50%;
     position: relative;
+    margin-left: 0px;
 
 }
 
 .ProductPreview > img {
     width: 100%;
+    
 }
 
 .TimeSection{
@@ -107,6 +109,7 @@ body {
     border-radius: 8px;
     margin-right: 12px;
     cursor: pointer;
+    display: flex;
 }
 
 .SelectedProductImage {
@@ -141,8 +144,46 @@ body {
     margin-top: 36px;
 }
 
-@media (max-width: 415px){
+.ProductInnerTitle{
+    display: none;
+
+}
+
+.ProductInnerDescription{
+    display: none;
+
+}
+
+@media (max-width: 420px){
     .MainContainer{
+        padding: 4% 12%;
+        margin-top: 32px;
+        box-sizing: border-box;
+        width: 100%;
+        align-items: center;
         display: block;
+    }
+
+    .ProductInnerTitle{
+        display: block;
+        font-size: 45px;
+        font-weight: 600;
+        margin-top: 30px;
+        margin-bottom: 16px;
+    
+    }
+    
+    .ProductInnerDescription{
+        display: block;
+        font-size: 20px;
+        color: rgba(0, 0, 0, 0.8);
+        margin-top: 0;
+        margin-bottom: 16px;
+    }
+    .ProductPreview {
+        width:50%;
+        position: relative;
+        margin-left: 60px;
+    
     }
 }
